--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.2)
 
-if(WIN32 OR WIN64)
-    message(STATUS "My Windows detected")
-    project(bulk VERSION 0.0.1000)
-    set(BOOST_ROOT "C:/Boost")
-else()
-    project(bulk VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
-endif()
+set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
+set(PROJECT_VESRION 0.0.${PATCH_VERSION})
+
+project(bulk VERSION ${PROJECT_VESRION})
+configure_file(version.h.in version.h)
 
 if(WIN32 OR WIN64)
     add_executable(bulk main.cpp bulk.cpp bulk.h)
