--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,16 @@ set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
 project(bulk VERSION ${PROJECT_VESRION})
+
 configure_file(version.h.in version.h)
 
-if(WIN32 OR WIN64)
-    add_executable(bulk main.cpp bulk.cpp bulk.h)
-else()
-    add_executable(bulk main.cpp bulk.cpp)
-endif()
+add_executable(bulk main.cpp bulk.cpp bulk.h)
+
+set_target_properties(bulk PROPERTIES
+CXX_STANDARD 17
+CXX_STANDARD_REQUIRED ON
+)
+
 
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
@@ -18,11 +21,8 @@ if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -pedantic")
 endif()
 
-
-install(TARGETS bulk RUNTIME DESTINATION bin)
-
+install(TARGETS bulk DESTINATION bin)
 set(CPACK_GENERATOR DEB)
-
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
